tests/compilefail71.out
[1mtests/compilefail71.pas:9:10: [0m[1m[91merror:[0m Function succ() requires parameter of ordinal type
     9 | 	r := succ(r);