tests/compilefail71.pas
program compilefail71(output);
{invalid use of succ}


var r:real;


begin
	r := succ(r);
end.
